// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keyword onChange should search again 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <header
      class="header"
    >
      <div
        class="logoBox"
      >
        <h1>
          Sneakers App
        </h1>
        <img
          alt="logo"
          class="logo"
          src="logo.png"
        />
      </div>
      <nav
        class="nav"
      >
        <a
          href="#/trending/dewu"
        >
          Dewu Trending
        </a>
        <a
          href="#/trending/goat"
        >
          Goat Trending
        </a>
        <div
          class="main"
        >
          <div
            class="content"
          >
            <div
              class="avatar"
            >
              <img
                src="https://api.prodless.com/avatar.png"
              />
            </div>
          </div>
        </div>
      </nav>
    </header>
    <div
      class="banner"
    >
      <div
        class="introduce"
      >
        Search for Shoes and Integration Price For All Size
      </div>
      <div
        class="searchBox"
      >
        <input
          class="searchInput"
          title="search_input"
          type="text"
          value="Nike"
        />
        <button
          class="searchButton"
          title="search_button"
        />
        <div
          class="selectBox"
        >
          <span>
            Search Interface: 
          </span>
          <select
            class="searchInterface"
            title="search_interface_select"
          >
            <option
              value="dewu"
            >
              Dewu
            </option>
            <option
              value="stockx"
            >
              StockX
            </option>
            <option
              value="goat"
            >
              Goat
            </option>
            <option
              value="db"
            >
              DB
            </option>
          </select>
          <span>
            Search Suggestions Interface: 
          </span>
          <select
            class="searchInterface"
          >
            <option
              value="dewu"
            >
              Dewu
            </option>
            <option
              value="stockx"
            >
              StockX
            </option>
          </select>
        </div>
        <div
          class="searchSuggestion"
        />
      </div>
      <div
        class="iconBar"
      >
        <img
          alt="goat"
          class="logo"
          src="goat.png"
        />
        <img
          alt="dewu"
          class="logo"
          src="dewu.png"
        />
        <img
          alt="stockx"
          class="logo"
          src="stockx.png"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="header"
      >
        <h1
          class="title"
          title="search_title"
        >
          <div>
            Search stockx for 
            <span
              class="key"
            >
              (Nike)
            </span>
          </div>
        </h1>
      </div>
      <div
        class="box"
      >
        <div
          class="loader hidden"
          title="loader"
        >
          <div
            class="warpper"
          >
            <div
              class="inner"
            />
            <div
              class="text"
            >
              LOADING
            </div>
          </div>
        </div>
        <div
          class="card"
          data-testid="product_card"
        >
          <img
            alt="Air Jordan 1 Mid Shattered Backboard 扣碎篮板 篮球鞋"
            src="https://cdn.poizon.com/temp/Fn20HZPjmCnQk_VCNJ9C2HRg0xP5"
          />
          <div
            class="shoeName"
          >
            Air Jordan 1 Mid Shattered Backboard 扣碎篮板 篮球鞋
          </div>
          <div
            class="price"
          >
            $109
          </div>
          <div
            class="brand"
          >
            stockx
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`select onChange should search again 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <header
      class="header"
    >
      <div
        class="logoBox"
      >
        <h1>
          Sneakers App
        </h1>
        <img
          alt="logo"
          class="logo"
          src="logo.png"
        />
      </div>
      <nav
        class="nav"
      >
        <a
          href="#/trending/dewu"
        >
          Dewu Trending
        </a>
        <a
          href="#/trending/goat"
        >
          Goat Trending
        </a>
        <div
          class="main"
        >
          <div
            class="content"
          >
            <div
              class="avatar"
            >
              <img
                src="https://api.prodless.com/avatar.png"
              />
            </div>
          </div>
        </div>
      </nav>
    </header>
    <div
      class="banner"
    >
      <div
        class="introduce"
      >
        Search for Shoes and Integration Price For All Size
      </div>
      <div
        class="searchBox"
      >
        <input
          class="searchInput"
          title="search_input"
          type="text"
          value="Air"
        />
        <button
          class="searchButton"
          title="search_button"
        />
        <div
          class="selectBox"
        >
          <span>
            Search Interface: 
          </span>
          <select
            class="searchInterface"
            title="search_interface_select"
          >
            <option
              value="dewu"
            >
              Dewu
            </option>
            <option
              value="stockx"
            >
              StockX
            </option>
            <option
              value="goat"
            >
              Goat
            </option>
            <option
              value="db"
            >
              DB
            </option>
          </select>
          <span>
            Search Suggestions Interface: 
          </span>
          <select
            class="searchInterface"
          >
            <option
              value="dewu"
            >
              Dewu
            </option>
            <option
              value="stockx"
            >
              StockX
            </option>
          </select>
        </div>
        <div
          class="searchSuggestion"
        />
      </div>
      <div
        class="iconBar"
      >
        <img
          alt="goat"
          class="logo"
          src="goat.png"
        />
        <img
          alt="dewu"
          class="logo"
          src="dewu.png"
        />
        <img
          alt="stockx"
          class="logo"
          src="stockx.png"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="header"
      >
        <h1
          class="title"
          title="search_title"
        >
          <div>
            Search stockx for 
            <span
              class="key"
            >
              (Air)
            </span>
          </div>
        </h1>
      </div>
      <div
        class="box"
      >
        <div
          class="loader hidden"
          title="loader"
        >
          <div
            class="warpper"
          >
            <div
              class="inner"
            />
            <div
              class="text"
            >
              LOADING
            </div>
          </div>
        </div>
        <div
          class="card"
          data-testid="product_card"
        >
          <img
            alt="Air Jordan 1 Mid Shattered Backboard 扣碎篮板 篮球鞋"
            src="https://cdn.poizon.com/temp/Fn20HZPjmCnQk_VCNJ9C2HRg0xP5"
          />
          <div
            class="shoeName"
          >
            Air Jordan 1 Mid Shattered Backboard 扣碎篮板 篮球鞋
          </div>
          <div
            class="price"
          >
            $109
          </div>
          <div
            class="brand"
          >
            stockx
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should display Trending(dewu) in first 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <header
      class="header"
    >
      <div
        class="logoBox"
      >
        <h1>
          Sneakers App
        </h1>
        <img
          alt="logo"
          class="logo"
          src="logo.png"
        />
      </div>
      <nav
        class="nav"
      >
        <a
          href="#/trending/dewu"
        >
          Dewu Trending
        </a>
        <a
          href="#/trending/goat"
        >
          Goat Trending
        </a>
        <div
          class="main"
        >
          <div
            class="content"
          >
            <div
              class="avatar"
            >
              <img
                src="https://api.prodless.com/avatar.png"
              />
            </div>
          </div>
        </div>
      </nav>
    </header>
    <div
      class="banner"
    >
      <div
        class="introduce"
      >
        Search for Shoes and Integration Price For All Size
      </div>
      <div
        class="searchBox"
      >
        <input
          class="searchInput"
          title="search_input"
          type="text"
          value=""
        />
        <button
          class="searchButton"
          title="search_button"
        />
        <div
          class="selectBox"
        >
          <span>
            Search Interface: 
          </span>
          <select
            class="searchInterface"
            title="search_interface_select"
          >
            <option
              value="dewu"
            >
              Dewu
            </option>
            <option
              value="stockx"
            >
              StockX
            </option>
            <option
              value="goat"
            >
              Goat
            </option>
            <option
              value="db"
            >
              DB
            </option>
          </select>
          <span>
            Search Suggestions Interface: 
          </span>
          <select
            class="searchInterface"
          >
            <option
              value="dewu"
            >
              Dewu
            </option>
            <option
              value="stockx"
            >
              StockX
            </option>
          </select>
        </div>
        <div
          class="searchSuggestion"
        />
      </div>
      <div
        class="iconBar"
      >
        <img
          alt="goat"
          class="logo"
          src="goat.png"
        />
        <img
          alt="dewu"
          class="logo"
          src="dewu.png"
        />
        <img
          alt="stockx"
          class="logo"
          src="stockx.png"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="header"
      >
        <h1
          class="title"
          title="search_title"
        >
          Trending(dewu)
        </h1>
      </div>
      <div
        class="box"
      >
        <div
          class="loader hidden"
          title="loader"
        >
          <div
            class="warpper"
          >
            <div
              class="inner"
            />
            <div
              class="text"
            >
              LOADING
            </div>
          </div>
        </div>
        <div
          class="card"
          data-testid="product_card"
        >
          <img
            alt="Air Jordan 1 Mid Shattered Backboard 扣碎篮板 篮球鞋"
            src="https://cdn.poizon.com/temp/Fn20HZPjmCnQk_VCNJ9C2HRg0xP5"
          />
          <div
            class="shoeName"
          >
            Air Jordan 1 Mid Shattered Backboard 扣碎篮板 篮球鞋
          </div>
          <div
            class="price"
          >
            $109
          </div>
          <div
            class="brand"
          >
            stockx
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should handle server error 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <header
      class="header"
    >
      <div
        class="logoBox"
      >
        <h1>
          Sneakers App
        </h1>
        <img
          alt="logo"
          class="logo"
          src="logo.png"
        />
      </div>
      <nav
        class="nav"
      >
        <a
          href="#/trending/dewu"
        >
          Dewu Trending
        </a>
        <a
          href="#/trending/goat"
        >
          Goat Trending
        </a>
        <div
          class="main"
        >
          <div
            class="content"
          >
            <div
              class="avatar"
            >
              <img
                src="https://api.prodless.com/avatar.png"
              />
            </div>
          </div>
        </div>
      </nav>
    </header>
    <div
      class="banner"
    >
      <div
        class="introduce"
      >
        Search for Shoes and Integration Price For All Size
      </div>
      <div
        class="searchBox"
      >
        <input
          class="searchInput"
          title="search_input"
          type="text"
          value=""
        />
        <button
          class="searchButton"
          title="search_button"
        />
        <div
          class="selectBox"
        >
          <span>
            Search Interface: 
          </span>
          <select
            class="searchInterface"
            title="search_interface_select"
          >
            <option
              value="dewu"
            >
              Dewu
            </option>
            <option
              value="stockx"
            >
              StockX
            </option>
            <option
              value="goat"
            >
              Goat
            </option>
            <option
              value="db"
            >
              DB
            </option>
          </select>
          <span>
            Search Suggestions Interface: 
          </span>
          <select
            class="searchInterface"
          >
            <option
              value="dewu"
            >
              Dewu
            </option>
            <option
              value="stockx"
            >
              StockX
            </option>
          </select>
        </div>
        <div
          class="searchSuggestion"
        />
      </div>
      <div
        class="iconBar"
      >
        <img
          alt="goat"
          class="logo"
          src="goat.png"
        />
        <img
          alt="dewu"
          class="logo"
          src="dewu.png"
        />
        <img
          alt="stockx"
          class="logo"
          src="stockx.png"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="header"
      >
        <h1
          class="title"
          title="search_title"
        >
          Trending(dewu)
        </h1>
      </div>
      <div
        class="box"
      >
        <div
          class="loader hidden"
          title="loader"
        >
          <div
            class="warpper"
          >
            <div
              class="inner"
            />
            <div
              class="text"
            >
              LOADING
            </div>
          </div>
        </div>
        <div
          class="errorMsg"
        >
          Search Fail!
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should handle server error 2`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <header
      class="header"
    >
      <div
        class="logoBox"
      >
        <h1>
          Sneakers App
        </h1>
        <img
          alt="logo"
          class="logo"
          src="logo.png"
        />
      </div>
      <nav
        class="nav"
      >
        <a
          href="#/trending/dewu"
        >
          Dewu Trending
        </a>
        <a
          href="#/trending/goat"
        >
          Goat Trending
        </a>
        <div
          class="main"
        >
          <div
            class="content"
          >
            <div
              class="avatar"
            >
              <img
                src="https://api.prodless.com/avatar.png"
              />
            </div>
          </div>
        </div>
      </nav>
    </header>
    <div
      class="banner"
    >
      <div
        class="introduce"
      >
        Search for Shoes and Integration Price For All Size
      </div>
      <div
        class="searchBox"
      >
        <input
          class="searchInput"
          title="search_input"
          type="text"
          value=""
        />
        <button
          class="searchButton"
          title="search_button"
        />
        <div
          class="selectBox"
        >
          <span>
            Search Interface: 
          </span>
          <select
            class="searchInterface"
            title="search_interface_select"
          >
            <option
              value="dewu"
            >
              Dewu
            </option>
            <option
              value="stockx"
            >
              StockX
            </option>
            <option
              value="goat"
            >
              Goat
            </option>
            <option
              value="db"
            >
              DB
            </option>
          </select>
          <span>
            Search Suggestions Interface: 
          </span>
          <select
            class="searchInterface"
          >
            <option
              value="dewu"
            >
              Dewu
            </option>
            <option
              value="stockx"
            >
              StockX
            </option>
          </select>
        </div>
        <div
          class="searchSuggestion"
        />
      </div>
      <div
        class="iconBar"
      >
        <img
          alt="goat"
          class="logo"
          src="goat.png"
        />
        <img
          alt="dewu"
          class="logo"
          src="dewu.png"
        />
        <img
          alt="stockx"
          class="logo"
          src="stockx.png"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="header"
      >
        <h1
          class="title"
          title="search_title"
        >
          Trending(dewu)
        </h1>
      </div>
      <div
        class="box"
      >
        <div
          class="loader hidden"
          title="loader"
        >
          <div
            class="warpper"
          >
            <div
              class="inner"
            />
            <div
              class="text"
            >
              LOADING
            </div>
          </div>
        </div>
        <div
          class="errorMsg"
        >
          Search Fail!
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should show correctly following button 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <header
      class="header"
    >
      <div
        class="logoBox"
      >
        <h1>
          Sneakers App
        </h1>
        <img
          alt="logo"
          class="logo"
          src="logo.png"
        />
      </div>
      <nav
        class="nav"
      >
        <a
          href="#/trending/dewu"
        >
          Dewu Trending
        </a>
        <a
          href="#/trending/goat"
        >
          Goat Trending
        </a>
        <div
          class="main"
        >
          <div
            class="content"
          >
            <div
              class="avatar"
            >
              <img
                src="https://api.prodless.com/avatar.png"
              />
            </div>
          </div>
        </div>
      </nav>
    </header>
    <div
      class="banner"
    >
      <div
        class="introduce"
      >
        Search for Shoes and Integration Price For All Size
      </div>
      <div
        class="searchBox"
      >
        <input
          class="searchInput"
          title="search_input"
          type="text"
          value=""
        />
        <button
          class="searchButton"
          title="search_button"
        />
        <div
          class="selectBox"
        >
          <span>
            Search Interface: 
          </span>
          <select
            class="searchInterface"
            title="search_interface_select"
          >
            <option
              value="dewu"
            >
              Dewu
            </option>
            <option
              value="stockx"
            >
              StockX
            </option>
            <option
              value="goat"
            >
              Goat
            </option>
            <option
              value="db"
            >
              DB
            </option>
          </select>
          <span>
            Search Suggestions Interface: 
          </span>
          <select
            class="searchInterface"
          >
            <option
              value="dewu"
            >
              Dewu
            </option>
            <option
              value="stockx"
            >
              StockX
            </option>
          </select>
        </div>
        <div
          class="searchSuggestion"
        />
      </div>
      <div
        class="iconBar"
      >
        <img
          alt="goat"
          class="logo"
          src="goat.png"
        />
        <img
          alt="dewu"
          class="logo"
          src="dewu.png"
        />
        <img
          alt="stockx"
          class="logo"
          src="stockx.png"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="header"
      >
        <h1
          class="title"
          title="search_title"
        >
          Trending(dewu)
        </h1>
      </div>
      <div
        class="box"
      >
        <div
          class="loader hidden"
          title="loader"
        >
          <div
            class="warpper"
          >
            <div
              class="inner"
            />
            <div
              class="text"
            >
              LOADING
            </div>
          </div>
        </div>
        <div
          class="card"
          data-testid="product_card"
        >
          <img
            alt="Air Jordan 1 Mid Shattered Backboard 扣碎篮板 篮球鞋"
            src="https://cdn.poizon.com/temp/Fn20HZPjmCnQk_VCNJ9C2HRg0xP5"
          />
          <div
            class="shoeName"
          >
            Air Jordan 1 Mid Shattered Backboard 扣碎篮板 篮球鞋
          </div>
          <div
            class="price"
          >
            $109
          </div>
          <div
            class="brand"
          >
            stockx
          </div>
        </div>
      </div>
      <div>
        <div
          class="detail"
        >
          <header
            class="header"
          >
            <button
              class="closeBtn"
            >
              X
            </button>
          </header>
          <div
            class="container"
          >
            <div
              class="content"
            >
              <div
                class="photoBox"
              >
                <div
                  class="photo"
                >
                  <div
                    class="loader"
                    title="loader"
                  >
                    <div
                      class="warpper"
                    >
                      <div
                        class="inner"
                      />
                    </div>
                  </div>
                  <div
                    class="slick-slider slick-initialized"
                  >
                    <div
                      class="slick-list"
                    >
                      <div
                        class="slick-track"
                        style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
                      >
                        <div
                          aria-hidden="false"
                          class="slick-slide slick-active slick-current"
                          data-index="0"
                          style="outline: none; width: 0px;"
                          tabindex="-1"
                        >
                          <div>
                            <img
                              alt="Air Jordan 1 Mid Shattered Backboard 扣碎篮板 篮球鞋"
                              src="https://cdn.poizon.com/temp/Fn20HZPjmCnQk_VCNJ9C2HRg0xP5"
                              style="width: 100%; display: inline-block;"
                              tabindex="-1"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <p
                  class="time"
                  title="data_time"
                >
                  Data Time: 2020-11-25 22:10:41
                </p>
              </div>
              <div
                class="information"
              >
                <h2
                  class="showName"
                >
                  Air Jordan 1 Mid Shattered Backboard 扣碎篮板 篮球鞋
                </h2>
                <div
                  class="link"
                >
                  <a
                    href="https://www.goat.com/sneakers/air-jordan-1-mid-starfish-black-554724-058"
                    rel="noreferrer noopener"
                    target="_blank"
                  >
                    Visit Goat
                  </a>
                  <a
                    href="https://stockx.com/air-jordan-1-mid-shattered-backboard"
                    rel="noreferrer noopener"
                    target="_blank"
                  >
                    Visit StockX
                  </a>
                  <a
                    title="follow_button"
                  >
                    unfollow
                  </a>
                </div>
                <p
                  class="tab"
                >
                  Properties
                </p>
                <div
                  class="bashProperties"
                  title="product_basePropperties"
                >
                  <div
                    class="loader"
                    style="background-color: rgb(255, 255, 255);"
                    title="loader"
                  >
                    <div
                      class="warpper"
                    >
                      <div
                        class="inner"
                      />
                    </div>
                  </div>
                  No BaseProperties
                </div>
              </div>
            </div>
            <div
              class="sizeTable"
            >
              <div
                class="loader"
                style="background-color: rgb(255, 255, 255);"
                title="loader"
              >
                <div
                  class="warpper"
                >
                  <div
                    class="inner"
                  />
                </div>
              </div>
              No Price Table
            </div>
            <div
              class="sizeImage"
            />
          </div>
        </div>
        <div
          class="fullScreen"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should show correctly following button 2`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <header
      class="header"
    >
      <div
        class="logoBox"
      >
        <h1>
          Sneakers App
        </h1>
        <img
          alt="logo"
          class="logo"
          src="logo.png"
        />
      </div>
      <nav
        class="nav"
      >
        <a
          href="#/trending/dewu"
        >
          Dewu Trending
        </a>
        <a
          href="#/trending/goat"
        >
          Goat Trending
        </a>
        <div
          class="main"
        >
          <div
            class="content"
          >
            <div
              class="avatar"
            >
              <img
                src="https://api.prodless.com/avatar.png"
              />
            </div>
          </div>
        </div>
      </nav>
    </header>
    <div
      class="banner"
    >
      <div
        class="introduce"
      >
        Search for Shoes and Integration Price For All Size
      </div>
      <div
        class="searchBox"
      >
        <input
          class="searchInput"
          title="search_input"
          type="text"
          value=""
        />
        <button
          class="searchButton"
          title="search_button"
        />
        <div
          class="selectBox"
        >
          <span>
            Search Interface: 
          </span>
          <select
            class="searchInterface"
            title="search_interface_select"
          >
            <option
              value="dewu"
            >
              Dewu
            </option>
            <option
              value="stockx"
            >
              StockX
            </option>
            <option
              value="goat"
            >
              Goat
            </option>
            <option
              value="db"
            >
              DB
            </option>
          </select>
          <span>
            Search Suggestions Interface: 
          </span>
          <select
            class="searchInterface"
          >
            <option
              value="dewu"
            >
              Dewu
            </option>
            <option
              value="stockx"
            >
              StockX
            </option>
          </select>
        </div>
        <div
          class="searchSuggestion"
        />
      </div>
      <div
        class="iconBar"
      >
        <img
          alt="goat"
          class="logo"
          src="goat.png"
        />
        <img
          alt="dewu"
          class="logo"
          src="dewu.png"
        />
        <img
          alt="stockx"
          class="logo"
          src="stockx.png"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="header"
      >
        <h1
          class="title"
          title="search_title"
        >
          Trending(dewu)
        </h1>
      </div>
      <div
        class="box"
      >
        <div
          class="loader hidden"
          title="loader"
        >
          <div
            class="warpper"
          >
            <div
              class="inner"
            />
            <div
              class="text"
            >
              LOADING
            </div>
          </div>
        </div>
        <div
          class="card"
          data-testid="product_card"
        >
          <img
            alt="Air Jordan 1 Mid Shattered Backboard 扣碎篮板 篮球鞋"
            src="https://cdn.poizon.com/temp/Fn20HZPjmCnQk_VCNJ9C2HRg0xP5"
          />
          <div
            class="shoeName"
          >
            Air Jordan 1 Mid Shattered Backboard 扣碎篮板 篮球鞋
          </div>
          <div
            class="price"
          >
            $109
          </div>
          <div
            class="brand"
          >
            stockx
          </div>
        </div>
      </div>
      <div>
        <div
          class="detail"
        >
          <header
            class="header"
          >
            <button
              class="closeBtn"
            >
              X
            </button>
          </header>
          <div
            class="container"
          >
            <div
              class="content"
            >
              <div
                class="photoBox"
              >
                <div
                  class="photo"
                >
                  <div
                    class="loader"
                    title="loader"
                  >
                    <div
                      class="warpper"
                    >
                      <div
                        class="inner"
                      />
                    </div>
                  </div>
                  <div
                    class="slick-slider slick-initialized"
                  >
                    <div
                      class="slick-list"
                    >
                      <div
                        class="slick-track"
                        style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
                      >
                        <div
                          aria-hidden="false"
                          class="slick-slide slick-active slick-current"
                          data-index="0"
                          style="outline: none; width: 0px;"
                          tabindex="-1"
                        >
                          <div>
                            <img
                              alt="Air Jordan 1 Mid Shattered Backboard 扣碎篮板 篮球鞋"
                              src="https://cdn.poizon.com/temp/Fn20HZPjmCnQk_VCNJ9C2HRg0xP5"
                              style="width: 100%; display: inline-block;"
                              tabindex="-1"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <p
                  class="time"
                  title="data_time"
                >
                  Data Time: 2020-11-25 22:10:41
                </p>
              </div>
              <div
                class="information"
              >
                <h2
                  class="showName"
                >
                  Air Jordan 1 Mid Shattered Backboard 扣碎篮板 篮球鞋
                </h2>
                <div
                  class="link"
                >
                  <a
                    href="https://www.goat.com/sneakers/air-jordan-1-mid-starfish-black-554724-058"
                    rel="noreferrer noopener"
                    target="_blank"
                  >
                    Visit Goat
                  </a>
                  <a
                    href="https://stockx.com/air-jordan-1-mid-shattered-backboard"
                    rel="noreferrer noopener"
                    target="_blank"
                  >
                    Visit StockX
                  </a>
                  <a
                    title="follow_button"
                  >
                    follow
                  </a>
                </div>
                <p
                  class="tab"
                >
                  Properties
                </p>
                <div
                  class="bashProperties"
                  title="product_basePropperties"
                >
                  <div
                    class="loader"
                    style="background-color: rgb(255, 255, 255);"
                    title="loader"
                  >
                    <div
                      class="warpper"
                    >
                      <div
                        class="inner"
                      />
                    </div>
                  </div>
                  No BaseProperties
                </div>
              </div>
            </div>
            <div
              class="sizeTable"
            >
              <div
                class="loader"
                style="background-color: rgb(255, 255, 255);"
                title="loader"
              >
                <div
                  class="warpper"
                >
                  <div
                    class="inner"
                  />
                </div>
              </div>
              No Price Table
            </div>
            <div
              class="sizeImage"
            />
          </div>
        </div>
        <div
          class="fullScreen"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`title should display keyword after search 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <header
      class="header"
    >
      <div
        class="logoBox"
      >
        <h1>
          Sneakers App
        </h1>
        <img
          alt="logo"
          class="logo"
          src="logo.png"
        />
      </div>
      <nav
        class="nav"
      >
        <a
          href="#/trending/dewu"
        >
          Dewu Trending
        </a>
        <a
          href="#/trending/goat"
        >
          Goat Trending
        </a>
        <div
          class="main"
        >
          <div
            class="content"
          >
            <div
              class="avatar"
            >
              <img
                src="https://api.prodless.com/avatar.png"
              />
            </div>
          </div>
        </div>
      </nav>
    </header>
    <div
      class="banner"
    >
      <div
        class="introduce"
      >
        Search for Shoes and Integration Price For All Size
      </div>
      <div
        class="searchBox"
      >
        <input
          class="searchInput"
          title="search_input"
          type="text"
          value="Air"
        />
        <button
          class="searchButton"
          title="search_button"
        />
        <div
          class="selectBox"
        >
          <span>
            Search Interface: 
          </span>
          <select
            class="searchInterface"
            title="search_interface_select"
          >
            <option
              value="dewu"
            >
              Dewu
            </option>
            <option
              value="stockx"
            >
              StockX
            </option>
            <option
              value="goat"
            >
              Goat
            </option>
            <option
              value="db"
            >
              DB
            </option>
          </select>
          <span>
            Search Suggestions Interface: 
          </span>
          <select
            class="searchInterface"
          >
            <option
              value="dewu"
            >
              Dewu
            </option>
            <option
              value="stockx"
            >
              StockX
            </option>
          </select>
        </div>
        <div
          class="searchSuggestion"
        />
      </div>
      <div
        class="iconBar"
      >
        <img
          alt="goat"
          class="logo"
          src="goat.png"
        />
        <img
          alt="dewu"
          class="logo"
          src="dewu.png"
        />
        <img
          alt="stockx"
          class="logo"
          src="stockx.png"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="header"
      >
        <h1
          class="title"
          title="search_title"
        >
          <div>
            Search goat for 
            <span
              class="key"
            >
              (Air)
            </span>
          </div>
        </h1>
      </div>
      <div
        class="box"
      >
        <div
          class="loader hidden"
          title="loader"
        >
          <div
            class="warpper"
          >
            <div
              class="inner"
            />
            <div
              class="text"
            >
              LOADING
            </div>
          </div>
        </div>
        <div
          class="card"
          data-testid="product_card"
        >
          <img
            alt="Air Jordan 1 Mid Shattered Backboard 扣碎篮板 篮球鞋"
            src="https://cdn.poizon.com/temp/Fn20HZPjmCnQk_VCNJ9C2HRg0xP5"
          />
          <div
            class="shoeName"
          >
            Air Jordan 1 Mid Shattered Backboard 扣碎篮板 篮球鞋
          </div>
          <div
            class="price"
          >
            $109
          </div>
          <div
            class="brand"
          >
            stockx
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`trending button onClick should jump correct 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <header
      class="header"
    >
      <div
        class="logoBox"
      >
        <h1>
          Sneakers App
        </h1>
        <img
          alt="logo"
          class="logo"
          src="logo.png"
        />
      </div>
      <nav
        class="nav"
      >
        <a
          href="#/trending/dewu"
        >
          Dewu Trending
        </a>
        <a
          href="#/trending/goat"
        >
          Goat Trending
        </a>
        <div
          class="main"
        >
          <div
            class="content"
          >
            <div
              class="avatar"
            >
              <img
                src="https://api.prodless.com/avatar.png"
              />
            </div>
          </div>
        </div>
      </nav>
    </header>
    <div
      class="banner"
    >
      <div
        class="introduce"
      >
        Search for Shoes and Integration Price For All Size
      </div>
      <div
        class="searchBox"
      >
        <input
          class="searchInput"
          title="search_input"
          type="text"
          value="Nike"
        />
        <button
          class="searchButton"
          title="search_button"
        />
        <div
          class="selectBox"
        >
          <span>
            Search Interface: 
          </span>
          <select
            class="searchInterface"
            title="search_interface_select"
          >
            <option
              value="dewu"
            >
              Dewu
            </option>
            <option
              value="stockx"
            >
              StockX
            </option>
            <option
              value="goat"
            >
              Goat
            </option>
            <option
              value="db"
            >
              DB
            </option>
          </select>
          <span>
            Search Suggestions Interface: 
          </span>
          <select
            class="searchInterface"
          >
            <option
              value="dewu"
            >
              Dewu
            </option>
            <option
              value="stockx"
            >
              StockX
            </option>
          </select>
        </div>
        <div
          class="searchSuggestion"
        />
      </div>
      <div
        class="iconBar"
      >
        <img
          alt="goat"
          class="logo"
          src="goat.png"
        />
        <img
          alt="dewu"
          class="logo"
          src="dewu.png"
        />
        <img
          alt="stockx"
          class="logo"
          src="stockx.png"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="header"
      >
        <h1
          class="title"
          title="search_title"
        >
          Trending(goat)
        </h1>
      </div>
      <div
        class="box"
      >
        <div
          class="loader hidden"
          title="loader"
        >
          <div
            class="warpper"
          >
            <div
              class="inner"
            />
            <div
              class="text"
            >
              LOADING
            </div>
          </div>
        </div>
        <div
          class="card"
          data-testid="product_card"
        >
          <img
            alt="Air Jordan 1 Mid Shattered Backboard 扣碎篮板 篮球鞋"
            src="https://cdn.poizon.com/temp/Fn20HZPjmCnQk_VCNJ9C2HRg0xP5"
          />
          <div
            class="shoeName"
          >
            Air Jordan 1 Mid Shattered Backboard 扣碎篮板 篮球鞋
          </div>
          <div
            class="price"
          >
            $109
          </div>
          <div
            class="brand"
          >
            stockx
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`trending button onClick should jump correct 2`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <header
      class="header"
    >
      <div
        class="logoBox"
      >
        <h1>
          Sneakers App
        </h1>
        <img
          alt="logo"
          class="logo"
          src="logo.png"
        />
      </div>
      <nav
        class="nav"
      >
        <a
          href="#/trending/dewu"
        >
          Dewu Trending
        </a>
        <a
          href="#/trending/goat"
        >
          Goat Trending
        </a>
        <div
          class="main"
        >
          <div
            class="content"
          >
            <div
              class="avatar"
            >
              <img
                src="https://api.prodless.com/avatar.png"
              />
            </div>
          </div>
        </div>
      </nav>
    </header>
    <div
      class="banner"
    >
      <div
        class="introduce"
      >
        Search for Shoes and Integration Price For All Size
      </div>
      <div
        class="searchBox"
      >
        <input
          class="searchInput"
          title="search_input"
          type="text"
          value="Nike"
        />
        <button
          class="searchButton"
          title="search_button"
        />
        <div
          class="selectBox"
        >
          <span>
            Search Interface: 
          </span>
          <select
            class="searchInterface"
            title="search_interface_select"
          >
            <option
              value="dewu"
            >
              Dewu
            </option>
            <option
              value="stockx"
            >
              StockX
            </option>
            <option
              value="goat"
            >
              Goat
            </option>
            <option
              value="db"
            >
              DB
            </option>
          </select>
          <span>
            Search Suggestions Interface: 
          </span>
          <select
            class="searchInterface"
          >
            <option
              value="dewu"
            >
              Dewu
            </option>
            <option
              value="stockx"
            >
              StockX
            </option>
          </select>
        </div>
        <div
          class="searchSuggestion"
        />
      </div>
      <div
        class="iconBar"
      >
        <img
          alt="goat"
          class="logo"
          src="goat.png"
        />
        <img
          alt="dewu"
          class="logo"
          src="dewu.png"
        />
        <img
          alt="stockx"
          class="logo"
          src="stockx.png"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="header"
      >
        <h1
          class="title"
          title="search_title"
        >
          Trending(dewu)
        </h1>
      </div>
      <div
        class="box"
      >
        <div
          class="loader hidden"
          title="loader"
        >
          <div
            class="warpper"
          >
            <div
              class="inner"
            />
            <div
              class="text"
            >
              LOADING
            </div>
          </div>
        </div>
        <div
          class="card"
          data-testid="product_card"
        >
          <img
            alt="Air Jordan 1 Mid Shattered Backboard 扣碎篮板 篮球鞋"
            src="https://cdn.poizon.com/temp/Fn20HZPjmCnQk_VCNJ9C2HRg0xP5"
          />
          <div
            class="shoeName"
          >
            Air Jordan 1 Mid Shattered Backboard 扣碎篮板 篮球鞋
          </div>
          <div
            class="price"
          >
            $109
          </div>
          <div
            class="brand"
          >
            stockx
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
